[tool.poetry]
name = "spat-bot"
version = "0.1.0"
description = "Slack bot for several-people-are-talking"
authors = ["Abhinav Tushar <abhinav@lepisma.xyz>"]

[tool.poetry.dependencies]
python = "^3.9"
slackclient = "^2.9.2"
pydash = "^4.8.0"
docopt = "^0.6.2"
tqdm = "^4.50.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"

[tool.poetry.scripts]
spat-bot = "spat_bot.cli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
